# dyd

./: .gitignore  README.md  app.py  create_admin.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  util_func_1.py  utils_def_1.py
static/css/: style.css
templates/: admin.html  admin_analytics.html  admin_dashboard.html  admin_login.html  admin_notifications.html  admin_users.html  assistant.html  base.html  dashboard.html  home.html  login.html  marks.html  profile.html  register.html  riasec-results.html  survey.html
